--- a/task1-portfolio/index.html
+++ b/task1-portfolio/index.html
@@ -265,7 +265,7 @@
           <div class="swiper-wrapper">
             <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/textutils.png" alt="" class="portfolio-img" />
+              <img src="assets/textutils.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
                 <h3 class="portfolio-title">textUtils Webpage</h3>
