--- a/task1-portfolio/index.html
+++ b/task1-portfolio/index.html
@@ -291,7 +291,7 @@
                   This Gym Website is a simple and responsive web application created using HTML, CSS, and JavaScript.
                 </p>
                 <a
-                  href="https://github.com/maneeshgujar"
+                  href="https://github.com/maneeshgujar/Codsoft/task3-landingPage"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -309,7 +309,7 @@
                   This is a basic calculator webpage created using HTML, CSS, and JavaScript. It provides a user-friendly interface for performing simple arithmetic calculations.
                 </p>
                 <a
-                  href="https://github.com/maneeshgujar"
+                  href="https://github.com/maneeshgujar/Codsoft/task2-calculator"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
